--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,9 @@
     align-items: center;
     border-radius: 10px;
     cursor: pointer;
+    transform-style: preserve-3d;
+    transition: 300ms;
+    position: relative;
 }
 
 .icon-container {
@@ -76,6 +79,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateX(180deg);
+    backface-visibility: hidden;
 }
 
 .icon-container>svg {
